# sdl-rendering

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  cmake-unix.sh  main.cpp
